--- a/Test/en.lproj/MainStoryboard.storyboard
+++ b/Test/en.lproj/MainStoryboard.storyboard
@@ -19,10 +19,10 @@
             </objects>
             <point key="canvasLocation" x="-505" y="608"/>
         </scene>
-        <!--Main Input View Controller - Input-->
+        <!--Main Input View Controller - MainInputViewController-->
         <scene sceneID="d4q-5a-gwS">
             <objects>
-                <viewController storyboardIdentifier="" id="JrR-bA-UFn" customClass="MainInputViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="" title="MainInputViewController" id="JrR-bA-UFn" customClass="MainInputViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O3M-yl-8M5" customClass="MainInputViewContoller">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -115,10 +115,10 @@
             </objects>
             <point key="canvasLocation" x="245" y="630"/>
         </scene>
-        <!--Output View Controller - Output-->
+        <!--Output View Controller - OutputViewController-->
         <scene sceneID="4pg-ym-uJZ">
             <objects>
-                <viewController id="pMU-wD-U4Z" customClass="OutputViewController" sceneMemberID="viewController">
+                <viewController title="OutputViewController" id="pMU-wD-U4Z" customClass="OutputViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9cC-eg-781">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -213,10 +213,10 @@
             </objects>
             <point key="canvasLocation" x="245" y="1301"/>
         </scene>
-        <!--Input View Controller - SettingsVeiwController-->
+        <!--Input View Controller - InputViewController-->
         <scene sceneID="vRd-od-mKk">
             <objects>
-                <viewController storyboardIdentifier="" title="SettingsVeiwController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WlH-wl-hc2" customClass="InputViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="" title="InputViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WlH-wl-hc2" customClass="InputViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lkK-7G-pf6">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -242,6 +242,7 @@
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZDn-bg-Foy">
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="cLD-j6-L8u"/>
                                     <constraint firstAttribute="width" constant="91" id="jBq-LT-oj4"/>
                                 </constraints>
                                 <segments>
@@ -259,16 +260,16 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rRh-9g-Y7x" firstAttribute="top" secondItem="lkK-7G-pf6" secondAttribute="top" constant="107" id="0PY-kI-tqb"/>
                             <constraint firstItem="0ur-It-QYQ" firstAttribute="centerX" secondItem="lkK-7G-pf6" secondAttribute="centerX" type="default" id="0T8-AE-adg"/>
+                            <constraint firstItem="ZHL-Nu-hTq" firstAttribute="top" secondItem="lkK-7G-pf6" secondAttribute="top" constant="95" id="359-mr-jhL"/>
                             <constraint firstAttribute="trailing" secondItem="ZDn-bg-Foy" secondAttribute="trailing" constant="65" id="4Fw-Gd-bad"/>
                             <constraint firstItem="0ur-It-QYQ" firstAttribute="top" secondItem="lkK-7G-pf6" secondAttribute="top" constant="28" id="I4A-AI-kjf"/>
                             <constraint firstItem="ZDn-bg-Foy" firstAttribute="top" secondItem="Wh2-gv-OAO" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Qom-ae-7B9"/>
                             <constraint firstItem="rRh-9g-Y7x" firstAttribute="leading" secondItem="lkK-7G-pf6" secondAttribute="leading" constant="67" id="UfI-P2-nyD"/>
                             <constraint firstItem="ZDn-bg-Foy" firstAttribute="centerX" secondItem="Wh2-gv-OAO" secondAttribute="centerX" type="default" id="cTE-Cb-Rpv"/>
-                            <constraint firstItem="Wh2-gv-OAO" firstAttribute="baseline" secondItem="ZHL-Nu-hTq" secondAttribute="baseline" type="default" id="kJD-cz-Jj2"/>
                             <constraint firstItem="rRh-9g-Y7x" firstAttribute="centerX" secondItem="ZHL-Nu-hTq" secondAttribute="centerX" type="default" id="pG3-kh-wIt"/>
-                            <constraint firstItem="ZHL-Nu-hTq" firstAttribute="top" secondItem="lkK-7G-pf6" secondAttribute="top" constant="82" id="stY-p5-2xv"/>
+                            <constraint firstItem="ZHL-Nu-hTq" firstAttribute="baseline" secondItem="Wh2-gv-OAO" secondAttribute="baseline" type="default" id="q57-cI-MKQ"/>
+                            <constraint firstItem="rRh-9g-Y7x" firstAttribute="bottom" secondItem="ZDn-bg-Foy" secondAttribute="bottom" type="default" id="qMK-E2-LJh"/>
                             <constraint firstItem="rRh-9g-Y7x" firstAttribute="baseline" secondItem="ZDn-bg-Foy" secondAttribute="baseline" type="default" id="xoL-Iy-aNd"/>
                         </constraints>
                     </view>
@@ -282,7 +283,7 @@
                     <connections>
                         <outlet property="choiceSegmented" destination="0ur-It-QYQ" id="24w-wq-vGh"/>
                         <outlet property="keyTextFeild" destination="rRh-9g-Y7x" id="lBJ-dh-sK4"/>
-                        <outlet property="passesSegmented" destination="ZDn-bg-Foy" id="Lgi-Wv-hoh"/>
+                        <outlet property="passesSegmented" destination="ZDn-bg-Foy" id="6Vu-oh-gR6"/>
                         <segue destination="JrR-bA-UFn" kind="push" identifier="Hello" id="fyB-5I-hcT"/>
                     </connections>
                 </viewController>
@@ -294,12 +295,45 @@
     <resources>
         <image name="Outline.png" width="300" height="291"/>
     </resources>
+    <classes>
+        <class className="InputViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InputViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="choiceSegmented" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="keyTextFeild" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passesSegmented" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="MainInputViewController" superclassName="InputViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainInputViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clear:"/>
+                <relationship kind="action" name="clicked:"/>
+                <relationship kind="action" name="gotoSettings:"/>
+                <relationship kind="action" name="paster:"/>
+                <relationship kind="outlet" name="encryptTextVeiw" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OutputViewController" superclassName="MainInputViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OutputViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSettings:"/>
+                <relationship kind="action" name="copyButton:"/>
+                <relationship kind="action" name="showActionsheetButton:"/>
+                <relationship kind="action" name="showText:"/>
+                <relationship kind="outlet" name="labelTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="jOx-cw-ue8"/>
+        <segue reference="xA8-qg-CpZ"/>
     </inferredMetricsTieBreakers>
 </document>
