Settings fix, plist files still no work

--- a/Test/en.lproj/MainStoryboard.storyboard
+++ b/Test/en.lproj/MainStoryboard.storyboard
@@ -232,7 +232,7 @@
                                     <constraint firstAttribute="height" constant="31" id="jrX-ug-OAE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="decimalPad" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Key" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZHL-Nu-hTq">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
